<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="buildItBiggerApp">Build it Bigger</string>
    <string name="makeYourAppMaterial">Make Your App Material</string>
    <string name="popularMoviesApp">Popular Movies</string>
    <string name="stockHawkApp">Stock Hawk</string>
    <string name="goUbiquitousApp">Go Ubiquitous</string>
    <string name="capstoneApp">Capstone</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="title_activity_list_movies">ListMovies</string>
    <string name="action_settings">Settings</string>
    <string name="pref_movie_fetch_key" translatable="false">Movie Ordering Preference</string>
    <string name="pref_movie_ordering" translatable="false">Movie Ordering Preference</string>
    <string name="pref_movie_popularity_label" translatable="false">Popularity (Descending)</string>
    <string name="pref_movie_rating_label" translatable="false">Rating (Descending)</string>
    <string name="pref_movie_popularity" translatable="false">Popularity</string>
    <string name="pref_movie_rating" translatable="false">Rating</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
</resources>
